--- a/src/app/components/resume/resume.component.css
+++ b/src/app/components/resume/resume.component.css
@@ -188,6 +188,7 @@ header p a:hover {
     transition: color 0.3s ease;
     cursor: pointer;
     font-weight: 500;
+    color: #3498db;
 }
 
 .experience p a:hover {
